--- a/mls-frontend/mls-app/src/Components/HomeComps/HomeTopContent/HomeTop.css
+++ b/mls-frontend/mls-app/src/Components/HomeComps/HomeTopContent/HomeTop.css
@@ -2,19 +2,52 @@
 
 .home {
     display: flex;
-    justify-content: space-between;
+    justify-content: center;
     align-items: center;
     flex-direction: column;
-    height: 70vh;
+    height: 85vh;
+    width: 100%;
     position: relative;
 }
 
-.home__title {
+/* Home Group */
+
+.group {
     display: flex;
+    flex-direction: row;
     align-items: center;
-    flex: 1;
+    justify-content: space-between;
+    width: 200px;
+    height: 50px;
+    background-color: #444444;
+    opacity: 0.9;
+}
+
+.small-box {
+    width: 5px;
+    height: 50px;
+    background-color: #D9D9D9;
+}
+
+.arrow-group {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 20px;
+    width: 50px;
+    height: 50px;
+    background-color: #D9D9D9;
+    cursor: pointer;
+}
+
+.arrow {
+    color: black;
+}
+
+.home__title {
     font-size: var(--main-heading-big-desktop);
-    text-shadow: 3px 3px 5px black;
+    font-weight: 100;
+    letter-spacing: 1px;
 }
 
 .home__arrow-icon {
@@ -25,6 +58,8 @@
     width: 100%;
     height: 100%;
     object-fit: cover;
+    background-position: center;
+    background-repeat: no-repeat;
     position: absolute;
     top: 0%;
     left: 0%;
@@ -38,6 +73,9 @@
     .home__title {
         font-size: var(--main-heading-big-desktop);
     }
+
+    .home {
+    }
 }
 
 /* CSS for Laptop */
@@ -45,13 +83,20 @@
     .home__title {
         font-size: var(--main-heading-small-desktop);
     }
+
+    .home {
+    }
 }    
 
 /* CSS for Ipad */
-@media screen and (min-width: 481px) and (max-width: 768px) {
+@media screen and (min-width: 475px) and (max-width: 768px) {
     .home__title {
         font-size: var(--main-heading-big-mobile);
     }
+
+    .home {
+    }
+
 }
 
 /* CSS for Mobile */
