--- a/mls-frontend/mls-app/src/Components/FooterComps/FooterComp.css
+++ b/mls-frontend/mls-app/src/Components/FooterComps/FooterComp.css
@@ -20,8 +20,11 @@
 }
 
 .footer__opening__hours-list, .footer__contact-list {
+    display: flex;
+    flex-direction: column;
     list-style: none;
     padding: 0;
+    gap: 5px;
 }
 
 .footer__opening__hours-item {
@@ -29,7 +32,7 @@
 }
 
 .footer__contact-item {
-    margin-bottom: 35px;
+    margin-bottom: 5px;
 }
 
 /* Footer Logo */
