--- a/mls-frontend/mls-app/src/Components/OrderComps/OrderComp.css
+++ b/mls-frontend/mls-app/src/Components/OrderComps/OrderComp.css
@@ -1,3 +1,5 @@
+/* Order Date */
+
 .order__date__section {
     display: flex;
     flex-direction: column;
@@ -26,11 +28,28 @@
   margin-top: 10px;
 }
 
-.order__info__wrapper {
+/* Order Info */
+
+.order__info__section {
   background-color: var(--card-bg);
-  width: 396px;
+  width: 376px;
   height: 200px;
   margin-top: 10px;
+  padding: 10px;
+}
+
+.order__info-text__wrapper {
+  display: grid;
+  grid-template-columns: 60% 20% 20%;
+  grid-template-rows: 50px 100px;
+}
+
+.order__info__wrapper-included {
+  grid-area: 2 / 1 / 3 / 4;
+}
+
+.order__info__wrapper-included-text {
+  margin-right: 3px;
 }
 
 .order__info__wrapper-btn {
@@ -51,6 +70,7 @@
   }
 }
 
+/* Order Date CSS Import */
 /* Variables declaration */
 /* prettier-ignore */
 .rdp-root {
